--- a/index.html
+++ b/index.html
@@ -3,131 +3,165 @@
 <head>
 <meta charset="UTF-8">
 <title>Turnuva Takip</title>
+
 <style>
-body{margin:0;font-family:Arial;background:#f4f4f4}
-.header{background:#c40000;padding:10px;text-align:center}
-.header span{background:#0a4db8;color:#fff;padding:6px 18px;border-radius:6px;font-weight:bold}
-.controls{text-align:center;padding:10px;background:#eee}
-select,input,button{padding:6px;font-size:14px;margin:4px}
-.wrapper{width:1100px;margin:10px auto;background:#fff;padding:10px}
-table{width:100%;border-collapse:collapse;table-layout:fixed}
-th,td{border:1px solid #000;padding:4px;font-size:11px;text-align:center;width:30px;word-break:break-word}
-th{background:#dce9f9}
-td.name{width:180px;text-align:left}
-tr:nth-child(even){background:#eaf6ee}
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #f4f4f4;
+}
+
+/* ÜST BAR */
+.header {
+    background: #c40000;
+    padding: 10px;
+    text-align: center;
+}
+.header span {
+    background: #0b4dbb;
+    color: white;
+    padding: 6px 20px;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+/* ARAMA */
+.search {
+    margin: 20px;
+    text-align: center;
+}
+.search input {
+    padding: 6px;
+    width: 250px;
+}
+.search button {
+    padding: 6px 15px;
+    cursor: pointer;
+}
+
+/* TABLO */
+table {
+    border-collapse: collapse;
+    margin: 20px auto;
+    width: 95%;
+    background: white;
+    table-layout: fixed;
+}
+
+th, td {
+    border: 1px solid black;
+    padding: 6px;
+    font-size: 13px;
+    text-align: center;
+    word-wrap: break-word;
+}
+
+th {
+    background: #e3f0ff;
+}
+
+/* ZEBRA */
+tbody tr:nth-child(odd) {
+    background: #eaffea;
+}
+
+/* SÜTUN GENİŞLİKLERİ */
+.col-player { width: 220px; text-align: left; }
+.col-small  { width: 80px; }
+
+/* GİZLE */
+.hidden {
+    display: none;
+}
 </style>
 </head>
 
 <body>
 
-<div class="header"><span>TURNUVA TAKİP</span></div>
-
-<div class="controls">
-  Grup:
-  <select id="groupSelect"></select>
-  Oyuncu Ara:
-  <input id="playerInput" placeholder="Ad Soyad">
-  <button onclick="findPlayer()">Bul</button>
+<div class="header">
+    <span>TURNUVA TAKİP</span>
 </div>
 
-<div class="wrapper">
-<table>
+<div class="search">
+    Oyuncu Ara:
+    <input type="text" id="playerInput" placeholder="Oyuncu Adı Soyadı">
+    <button onclick="searchPlayer()">Bul</button>
+</div>
+
+<table id="resultTable" class="hidden">
 <thead>
 <tr>
-  <th class="name">Karşılaşmalar</th>
-  <th>Skor</th>
-  <th>MP</th>
-  <th>Alınan</th>
-  <th>Gereken</th>
-  <th>Averaj</th>
-  <th>EYS1</th>
-  <th>EYS2</th>
+    <th class="col-player">Karşılaşmalar</th>
+    <th class="col-small">Skor</th>
+    <th class="col-small">MP</th>
+    <th class="col-small">Alınan</th>
+    <th class="col-small">Gereken</th>
+    <th class="col-small">Averaj</th>
+    <th class="col-small">EYS1</th>
+    <th class="col-small">EYS2</th>
 </tr>
 </thead>
 <tbody id="tableBody"></tbody>
 </table>
-</div>
 
 <script>
 const CSV_URL =
-"https://docs.google.com/spreadsheets/d/e/2PACX-1vQ359o8xV7eUC94-244P9_A83mf5-iSYA7HNQq9sNyvk-w1iP8dCVokASwjLRaFBL-t0Hkf1wxFuq9u/pub?gid=1252443441&single=true&output=csv";
+"https://docs.google.com/spreadsheets/d/e/2PACX-1vQ359o8xV7eUC94-244P9_A83mf5-iSYA7HNQq9sNyvk-w1iP8dCVokASwjLRaFBL-t0Hkf1wxFuq9u/pub?output=csv";
 
-const ROWS_PER_GROUP = 27;
-const TOTAL_GROUPS = 27;
-
-let data=[];
-
-const groupSelect=document.getElementById("groupSelect");
-for(let i=1;i<=TOTAL_GROUPS;i++){
-  const o=document.createElement("option");
-  o.value=i;o.textContent="G"+i;
-  groupSelect.appendChild(o);
-}
+let rows = [];
 
 fetch(CSV_URL)
-.then(r=>r.text())
-.then(text=>{
-  text=text.replace(/^\uFEFF/, ""); // BOM temizle
-
-  const delimiter = text.includes(";") ? ";" :
-                    text.includes("\t") ? "\t" : ",";
-
-  const rows=text.split(/\r?\n/);
-  data=rows.map(r =>
-    r.split(delimiter).map(c =>
-      c.replace(/^"|"$/g,"").trim()
-    )
-  );
-
-  loadGroup(1);
+.then(r => r.text())
+.then(text => {
+    rows = text.split("\n").map(r => r.split(","));
 });
 
-function loadGroup(g){
-  const tbody=document.getElementById("tableBody");
-  tbody.innerHTML="";
-  const start=(g-1)*ROWS_PER_GROUP;
-  const end=start+ROWS_PER_GROUP;
+function searchPlayer() {
+    const name = document.getElementById("playerInput").value.trim().toUpperCase();
+    if (!name) return;
 
-  for(let i=start;i<end;i++){
-    if(!data[i]) continue;
-    const tr=document.createElement("tr");
-    for(let c=1;c<=8;c++){
-      const td=document.createElement("td");
-      td.textContent=data[i][c]||"";
-      if(c===1) td.className="name";
-      tr.appendChild(td);
+    let foundGroup = null;
+    let startIndex = -1;
+
+    for (let i = 0; i < rows.length; i++) {
+        if (rows[i][0]?.startsWith("G")) {
+            for (let j = i + 1; j < i + 30 && j < rows.length; j++) {
+                if (rows[j][1]?.toUpperCase().includes(name)) {
+                    foundGroup = rows[i][0];
+                    startIndex = i;
+                    break;
+                }
+            }
+        }
+        if (foundGroup) break;
     }
-    tbody.appendChild(tr);
-  }
-}
 
-function normalize(t){
-  return t
-    .toUpperCase()
-    .replace(/İ/g,"I")
-    .replace(/Ş/g,"S")
-    .replace(/Ğ/g,"G")
-    .replace(/Ü/g,"U")
-    .replace(/Ö/g,"O")
-    .replace(/Ç/g,"C");
-}
-
-function findPlayer(){
-  const q=normalize(document.getElementById("playerInput").value.trim());
-  if(!q){alert("Oyuncu adı gir");return;}
-
-  for(let i=0;i<data.length;i++){
-    if(data[i][1] && normalize(data[i][1]).includes(q)){
-      const g=Math.floor(i/ROWS_PER_GROUP)+1;
-      groupSelect.value=g;
-      loadGroup(g);
-      return;
+    if (!foundGroup) {
+        alert("Oyuncu bulunamadı");
+        return;
     }
-  }
-  alert("Oyuncu bulunamadı");
+
+    renderGroup(startIndex);
 }
 
-groupSelect.onchange=e=>loadGroup(+e.target.value);
+function renderGroup(start) {
+    const body = document.getElementById("tableBody");
+    body.innerHTML = "";
+
+    for (let i = start + 1; i < start + 22 && i < rows.length; i++) {
+        if (rows[i][0]?.startsWith("Sporcular")) break;
+
+        const tr = document.createElement("tr");
+        for (let c = 1; c <= 8; c++) {
+            const td = document.createElement("td");
+            td.textContent = rows[i][c] || "";
+            tr.appendChild(td);
+        }
+        body.appendChild(tr);
+    }
+
+    document.getElementById("resultTable").classList.remove("hidden");
+}
 </script>
 
 </body>
