--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
 <style>
 body{
-    font-family: Arial, sans-serif;
     margin:0;
-    background:#f4f4f4;
+    font-family:Arial, sans-serif;
+    background:#fff;
 }
+
+/* ÜST BAR */
 .header{
     background:#c80000;
     padding:10px;
@@ -17,24 +19,56 @@ body{
 }
 .header span{
     background:#0b5ed7;
-    color:white;
+    color:#fff;
     padding:6px 20px;
     border-radius:6px;
     font-weight:bold;
 }
+
+/* KONTROLLER */
 .controls{
     text-align:center;
-    margin:20px;
+    margin:20px 0;
 }
-table{
-    border-collapse:collapse;
+select, input{
+    padding:4px;
+    font-size:14px;
+}
+
+/* ANA ALAN */
+.wrapper{
+    width:95%;
     margin:auto;
-    width:90%;
-    background:white;
+    display:flex;
+}
+
+/* SOL GRUP */
+.groupBox{
+    width:130px;
+    background:#e6f0ff;
+    border:1px solid #000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:48px;
+    font-weight:bold;
+    color:#0b5ed7;
+}
+
+/* TABLOLAR */
+.tables{
+    flex:1;
+    margin-left:10px;
+}
+
+table{
+    width:100%;
+    border-collapse:collapse;
+    margin-bottom:15px;
 }
 th, td{
     border:1px solid #000;
-    padding:4px;
+    padding:5px;
     font-size:13px;
     text-align:center;
 }
@@ -45,11 +79,8 @@ th{
     text-align:left;
     padding-left:6px;
 }
-tr:nth-child(even) td{
+tbody tr:nth-child(odd) td{
     background:#e8fff0;
-}
-.hidden{
-    display:none;
 }
 </style>
 </head>
@@ -57,77 +88,125 @@ tr:nth-child(even) td{
 <body>
 
 <div class="header">
-    <span>TURNÜVA TAKİP</span>
+    <span>G21 GRUBU</span>
 </div>
 
 <div class="controls">
+    Grup:
+    <select id="groupSelect">
+        <option value="">Seç</option>
+        <script>
+            for(let i=1;i<=27;i++){
+                document.write(`<option value="G${i}">G${i}</option>`);
+            }
+        </script>
+    </select>
+
+    &nbsp;&nbsp;
     Oyuncu Ara:
     <input type="text" id="playerInput" placeholder="Oyuncu Adı Soyadı">
-    <button onclick="searchPlayer()">Bul</button>
+    <button onclick="search()">Bul</button>
 </div>
 
-<table>
-<thead>
-<tr>
-    <th>Karşılaşmalar</th>
-    <th>Skor</th>
-    <th>MP</th>
-    <th>Alınan</th>
-    <th>Gereken</th>
-    <th>Averaj</th>
-    <th>EYS1</th>
-    <th>EYS2</th>
-</tr>
-</thead>
-<tbody id="tableBody"></tbody>
-</table>
+<div class="wrapper">
+
+    <div class="groupBox" id="groupBox">G--</div>
+
+    <div class="tables">
+
+        <!-- KARŞILAŞMALAR -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Karşılaşmalar</th>
+                    <th>Skor</th>
+                    <th>Maç Puanı</th>
+                    <th>Alınan Sayı</th>
+                    <th>Alınması Gereken Sayı</th>
+                    <th>Averaj</th>
+                    <th>EYS1</th>
+                    <th>EYS2</th>
+                </tr>
+            </thead>
+            <tbody id="matches"></tbody>
+        </table>
+
+        <!-- SPORCULAR -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Sporcular</th>
+                    <th>Toplam Maç Puanı</th>
+                    <th>Toplam Alınan Sayı</th>
+                    <th>Toplam Gereken Sayı</th>
+                    <th>Averaj</th>
+                    <th>EYS1</th>
+                    <th>EYS2</th>
+                    <th>Sıralama</th>
+                </tr>
+            </thead>
+            <tbody id="summary"></tbody>
+        </table>
+
+    </div>
+</div>
 
 <script>
-// 🔴 GOOGLE SHEETS CSV (YAYINLANMIŞ)
 const CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vQ359o8xV7eUC94-244P9_A83mf5-iSYA7HNQq9sNyvk-w1iP8dCVokASwjLRaFBL-t0Hkf1wxFuq9u/pub?output=csv";
 
-let allRows = [];
+let data = [];
 
 fetch(CSV_URL)
-.then(res => res.text())
-.then(text => {
-    const rows = text.split("\n").map(r => r.split(","));
-    // Başlık satırlarını atla
-    allRows = rows.slice(1);
+.then(r=>r.text())
+.then(t=>{
+    data = t.split("\n").map(r=>r.split(","));
 });
 
-function searchPlayer(){
+function search(){
+    const group = document.getElementById("groupSelect").value;
     const name = document.getElementById("playerInput").value.trim().toUpperCase();
-    const tbody = document.getElementById("tableBody");
-    tbody.innerHTML = "";
 
-    if(!name){
-        alert("Oyuncu adı gir");
+    if(!group || !name){
+        alert("Grup ve oyuncu adı seç");
         return;
     }
 
-    const results = allRows.filter(r => r[1] && r[1].toUpperCase().includes(name));
+    document.getElementById("groupBox").innerText = group;
 
-    if(results.length === 0){
-        alert("Oyuncu bulunamadı");
+    const matches = document.getElementById("matches");
+    const summary = document.getElementById("summary");
+    matches.innerHTML = "";
+    summary.innerHTML = "";
+
+    const filtered = data.filter(r =>
+        r[0] === group && r[1] && r[1].toUpperCase().includes(name)
+    );
+
+    if(filtered.length === 0){
+        alert("Oyuncu bu grupta bulunamadı");
         return;
     }
 
-    results.forEach(r => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
+    filtered.forEach(r=>{
+        matches.innerHTML += `
+        <tr>
             <td class="name">${r[1]}</td>
-            <td>${r[2] || ""}</td>
-            <td>${r[3] || ""}</td>
-            <td>${r[4] || ""}</td>
-            <td>${r[5] || ""}</td>
-            <td>${r[6] || ""}</td>
-            <td>${r[7] || ""}</td>
-            <td>${r[8] || ""}</td>
-        `;
-        tbody.appendChild(tr);
+            <td>${r[2]||""}</td>
+            <td>${r[3]||""}</td>
+            <td>${r[4]||""}</td>
+            <td>${r[5]||""}</td>
+            <td>${r[6]||""}</td>
+            <td>${r[7]||""}</td>
+            <td>${r[8]||""}</td>
+        </tr>`;
     });
+
+    summary.innerHTML = `
+    <tr>
+        <td class="name">${name}</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>`;
 }
 </script>
 
