--- a/index.html
+++ b/index.html
@@ -5,87 +5,29 @@
 <title>Turnuva Takip</title>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-}
+body{margin:0;font-family:Arial,Helvetica,sans-serif;}
+.header{background:#c40000;padding:10px;text-align:center;}
+.header span{background:#0a4db8;color:#fff;padding:6px 18px;border-radius:6px;font-weight:bold;}
 
-/* ÜST BAR */
-.header{
-  background:#c40000;
-  padding:10px;
-  text-align:center;
-}
-.header span{
-  background:#0a4db8;
-  color:#fff;
-  padding:6px 18px;
-  border-radius:6px;
-  font-weight:bold;
-}
+.controls{text-align:center;margin:15px 0;}
+select,input,button{padding:6px;margin:3px;}
 
-/* KONTROLLER */
-.controls{
-  text-align:center;
-  margin:15px 0;
-}
-select, input{
-  padding:4px;
-}
-
-/* SAYFA */
-.wrapper{
-  width:1200px;
-  margin:20px auto;
-  display:flex;
-  gap:10px;
-}
-
-/* SOL GRUP */
+.wrapper{max-width:1200px;margin:10px auto;padding:5px;}
 .g21box{
-  width:140px;
-  background:#dce9f9;
-  border:1px solid #000;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:80px;
-  font-weight:bold;
-  color:#0a63b8;
+  width:120px;height:120px;
+  background:#dce9f9;border:1px solid #000;
+  display:flex;align-items:center;justify-content:center;
+  font-size:48px;font-weight:bold;color:#0a63b8;
+  margin-bottom:10px;
 }
 
-/* TABLO */
-table{
-  width:100%;
-  border-collapse:collapse;
-  table-layout:fixed;
-}
+table{width:100%;border-collapse:collapse;table-layout:fixed;}
+th,td{border:1px solid #000;padding:4px;font-size:11px;text-align:center;word-wrap:break-word;}
+th{background:#dce9f9;}
+.name{text-align:left;}
 
-th, td{
-  border:1px solid #000;
-  width:35px;
-  padding:4px;
-  font-size:11px;
-  text-align:center;
-  white-space:normal;
-}
-
-thead th{
-  background:#dce9f9;
-}
-
-.name{
-  width:140px;
-  text-align:left;
-  padding-left:6px;
-}
-
-.green{
-  background:#d9f6df;
-}
-
-.subhead th{
-  background:#dce9f9;
+@media(max-width:700px){
+  table{display:block;overflow-x:auto;}
 }
 </style>
 </head>
@@ -93,13 +35,13 @@ thead th{
 <body>
 
 <div class="header">
-  <span id="title">G21 GRUBU</span>
+  <span id="title">TUR 1</span>
 </div>
 
 <div class="controls">
   Grup:
   <select id="groupSelect">
-    <option value="">Seç</option>
+    <option value="">Hepsi</option>
     <script>
       for(let i=1;i<=27;i++){
         document.write(`<option value="G${i}">G${i}</option>`);
@@ -107,110 +49,74 @@ thead th{
     </script>
   </select>
 
-  &nbsp;&nbsp;
   Oyuncu:
-  <input id="playerInput" placeholder="Oyuncu adı">
-  <button onclick="search()">Bul</button>
+  <input id="playerInput" placeholder="İsim yaz">
+  <button onclick="loadData()">Göster</button>
 </div>
 
 <div class="wrapper">
+  <div class="g21box" id="groupBox">--</div>
 
-<div class="g21box" id="groupBox">G--</div>
-
-<div style="flex:1">
-
-<table>
-<thead>
-<tr>
-  <th class="name">Karşılaşmalar</th>
-  <th>Skor</th>
-  <th>Maç<br>Puanı</th>
-  <th>Alınan<br>Sayı</th>
-  <th>Alınması<br>Gereken Sayı</th>
-  <th>Averaj</th>
-  <th>EYS1</th>
-  <th>EYS2</th>
-</tr>
-</thead>
-<tbody id="matches"></tbody>
-</table>
-
-<br>
-
-<table>
-<thead class="subhead">
-<tr>
-  <th class="name">Sporcular</th>
-  <th>Toplam<br>Maç Puanı</th>
-  <th>Toplam<br>Alınan Sayı</th>
-  <th>Toplam<br>Gereken Sayı</th>
-  <th>Averaj</th>
-  <th>EYS1</th>
-  <th>EYS2</th>
-  <th>Sıralama</th>
-</tr>
-</thead>
-<tbody id="summary"></tbody>
-</table>
-
-</div>
+  <table>
+    <thead>
+      <tr>
+        <th class="name">Oyuncu</th>
+        <th>Rakip</th>
+        <th>Skor</th>
+        <th>MP</th>
+        <th>AS</th>
+        <th>GS</th>
+        <th>Av</th>
+      </tr>
+    </thead>
+    <tbody id="matches"></tbody>
+  </table>
 </div>
 
 <script>
-const CSV_URL =
-"https://docs.google.com/spreadsheets/d/e/2PACX-1vQ359o8xV7eUC94-244P9_A83mf5-iSYA7HNQq9sNyvk-w1iP8dCVokASwjLRaFBL-t0Hkf1wxFuq9u/pub?gid=1252443441&output=csv";
+const DATA_URL = "https://opensheet.elk.sh/1s0fY_9-99WAT_G4XyPDdWeQnVThyjfCCC9IzqwZ662Y/TUR1";
+let allData = [];
 
-let data = [];
+fetch(DATA_URL)
+  .then(res => res.json())
+  .then(json => allData = json);
 
-fetch(CSV_URL)
-.then(r=>r.text())
-.then(t=>{
-  data = t.split("\n").map(r=>r.split(","));
-});
-
-function search(){
+function loadData(){
   const group = groupSelect.value;
   const name = playerInput.value.toUpperCase();
+  matches.innerHTML = "";
 
-  if(!group || !name){
-    alert("Grup ve oyuncu gir");
-    return;
+  let filtered = allData;
+
+  if(group){
+    filtered = filtered.filter(r => r.grup === group);
+    groupBox.innerText = group;
+  } else {
+    groupBox.innerText = "--";
   }
 
-  groupBox.innerText = group;
-  title.innerText = group + " GRUBU";
-
-  matches.innerHTML = "";
-  summary.innerHTML = "";
-
-  const filtered = data.filter(r =>
-    r[0] === group && r[1].toUpperCase().includes(name)
-  );
+  if(name){
+    filtered = filtered.filter(r => r.oyuncu.toUpperCase().includes(name));
+  }
 
   if(filtered.length === 0){
-    alert("Oyuncu bulunamadı");
+    matches.innerHTML = "<tr><td colspan='7'>Kayıt bulunamadı</td></tr>";
     return;
   }
 
-  filtered.forEach((r,i)=>{
+  filtered.forEach(r=>{
     matches.innerHTML += `
-    <tr class="${i%2==0?'green':''}">
-      <td class="name">${r[1]}</td>
-      <td>${r[2]||""}</td>
-      <td>${r[3]||""}</td>
-      <td>${r[4]||""}</td>
-      <td>${r[5]||""}</td>
-      <td>${r[6]||""}</td>
-      <td>${r[7]||""}</td>
-      <td>${r[8]||""}</td>
-    </tr>`;
+      <tr>
+        <td class="name">${r.oyuncu}</td>
+        <td>${r.rakip}</td>
+        <td>${r.skor}</td>
+        <td>${r.mac_puani}</td>
+        <td>${r.alinan_sayi}</td>
+        <td>${r.gereken_sayi}</td>
+        <td>${r.averaj}</td>
+      </tr>
+    `;
   });
-
-  summary.innerHTML = `
-    <tr>
-      <td class="name">${name}</td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>`;
 }
 </script>
 
