Update header with tournament details

--- a/index.html
+++ b/index.html
@@ -90,8 +90,14 @@ thead th{
 <body>
 
 <div class="header">
-  <span>G21 GRUBU</span>
+  <div style="color:#fff;font-size:14px;font-weight:bold;">
+    HANDİKAPLI 2. LONGONİ CUP
+  </div>
+  <div style="margin-top:4px;">
+    <span>Turnuva Takibi</span>
+  </div>
 </div>
+
 
 <div class="wrapper">
 
